Stop map from overflowing

--- a/css/map.css
+++ b/css/map.css
@@ -15,9 +15,6 @@ html, body {
 }
 
 #map {
-    
     height: 80%;
     width: 100%;
-    margin:0;
-    padding:0;
 }
